--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </div>
             <div class="visual">
                 <div class="bg"></div>
-                <img src="img/burger.png" alt="Burger">
+                <img src="burger.png" alt="Burger">
             </div>
         </div>
     </div>
